--- a/ProjectX/Base.lproj/Main.storyboard
+++ b/ProjectX/Base.lproj/Main.storyboard
@@ -268,7 +268,14 @@
                         <gestureRecognizers/>
                         <viewLayoutGuide key="safeArea" id="qfP-aZ-v0Y"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Choose Events" largeTitleDisplayMode="always" id="vBp-h5-k84"/>
+                    <navigationItem key="navigationItem" title="Choose Events" largeTitleDisplayMode="always" id="vBp-h5-k84">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="V9L-x8-EjQ">
+                            <connections>
+                                <action selector="CreateEventAction:" destination="r4X-bz-L6V" id="NzU-w1-eDM"/>
+                                <segue destination="8OV-dk-pYB" kind="presentation" identifier="CreateEventSegue" id="x5O-Dt-ynZ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="Eventdescription" destination="axT-9o-AKG" id="rxr-EA-prQ"/>
                         <outlet property="card" destination="VDE-fv-mOb" id="uss-6h-7CF"/>
@@ -286,6 +293,102 @@
                 </panGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1552.8" y="1746.4767616191905"/>
+        </scene>
+        <!--New event-->
+        <scene sceneID="6Dd-2v-c9l">
+            <objects>
+                <viewController id="2Wd-hY-bgS" customClass="CreateEventViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2Yj-AO-5J6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Event name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k6i-zI-nWb">
+                                <rect key="frame" x="29" y="92" width="310" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Event description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4mC-JH-UdG">
+                                <rect key="frame" x="29" y="140" width="310" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Event date" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xTZ-4D-3Kr">
+                                <rect key="frame" x="29" y="255" width="310" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Event location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yyZ-tL-RJy">
+                                <rect key="frame" x="29" y="193" width="310" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Number of Attendees" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UtB-l6-aUk">
+                                <rect key="frame" x="29" y="318" width="310" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="image_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="YCR-yb-8Vh">
+                                <rect key="frame" x="92" y="393" width="185" height="190"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="015-KT-hjr" appends="YES" id="luE-xq-7JL"/>
+                                </connections>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
+                        <viewLayoutGuide key="safeArea" id="sat-LA-akR"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="E9E-Zx-QUD" appends="YES" id="fY1-eY-rXs"/>
+                        </connections>
+                    </view>
+                    <navigationItem key="navigationItem" title="New event" id="IIr-Wz-QGq">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="61R-yw-Aci">
+                            <connections>
+                                <action selector="didTapCancel:" destination="2Wd-hY-bgS" id="0Ro-Sg-BQU"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Create" id="n5A-be-wSZ">
+                            <connections>
+                                <action selector="didTapCreate:" destination="2Wd-hY-bgS" id="yIe-1A-KKg"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="cancelButton" destination="61R-yw-Aci" id="7Cz-uR-wZF"/>
+                        <outlet property="createAttendees" destination="UtB-l6-aUk" id="acF-gK-Xhr"/>
+                        <outlet property="createButton" destination="n5A-be-wSZ" id="V0b-fU-kwU"/>
+                        <outlet property="createEventDate" destination="xTZ-4D-3Kr" id="ut4-wr-IpS"/>
+                        <outlet property="createEventDescription" destination="4mC-JH-UdG" id="8sr-hV-rIT"/>
+                        <outlet property="createEventLocation" destination="yyZ-tL-RJy" id="TPI-eV-rTe"/>
+                        <outlet property="createEventName" destination="k6i-zI-nWb" id="gYC-4q-oVc"/>
+                        <outlet property="createPicture" destination="YCR-yb-8Vh" id="Muy-FI-A22"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9aS-Wk-UlZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="E9E-Zx-QUD">
+                    <connections>
+                        <action selector="closeKeyboard:" destination="2Wd-hY-bgS" id="aO5-IC-3uY"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="015-KT-hjr">
+                    <connections>
+                        <action selector="OpenCameraButton:" destination="2Wd-hY-bgS" id="yUL-Go-SRG"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="3428" y="1745.577211394303"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="b9t-47-NuS">
@@ -727,8 +830,27 @@
             </objects>
             <point key="canvasLocation" x="631" y="3319"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="F1H-ah-R2O">
+            <objects>
+                <navigationController storyboardIdentifier="CreateEventSegue" automaticallyAdjustsScrollViewInsets="NO" id="8OV-dk-pYB" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="1Zq-wO-QjT">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2Wd-hY-bgS" kind="relationship" relationship="rootViewController" id="hAc-30-Rhe"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pZO-Xh-xMg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2488.8000000000002" y="1745.577211394303"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="image_placeholder" width="375" height="375"/>
         <image name="location" width="42.666667938232422" height="42.666667938232422"/>
     </resources>
 </document>
